--- a/style.css
+++ b/style.css
@@ -41,9 +41,12 @@ footer {
     height: 30px;
 }
 
+ul {
+    list-style: none;
+}
+
 
 ul li {
-    list-style: none;
     margin-top: 15px;
 }
 
